--- a/1. Introducción  a git.md
+++ b/1. Introducción  a git.md
@@ -43,3 +43,5 @@ Existen otros repositorios de código como BitBucket, SourceForge, Assembla, Clo
 Tienes que saber que hay dos maneras de utilizar Git. graficamente o por teminal. Para realmente aprender Git lo mejor es utiliza la terminal, además de que tendremos más rapidez a la hora de ejecutar acciones y podemos personalizar y hasta automatizar comandos. Por último quiero aclarar que de seguro cuando estas programando tienes una teminal abierta y esta es la manera más rápida de utilizar Git, no obstante aprenderemos la manera gráfica mendiante aplicaciones como GitHub Desktop es totalmente válido.
 
 El funcionamiento de Git es muy interesante, pero antes hay que definir ciertos conceptos.
+
+## **Trabajo en Git**
