--- a/1. Introducción  a git.md
+++ b/1. Introducción  a git.md
@@ -1,6 +1,6 @@
 # **1 Introducción a Git**
 
-## **¿Qué es un Sistema de Control de Versiones?**
+## ¿Qué es un Sistema de Control de Versiones?
 
 Un Sistema de Control de Versiones más conocido como *VCS* (Version Control System) es un sistema que nos permite tener un control de los cambios, modificaciones que tiene un software que se está desarrollando, ya sea entre pocos desarrolladores o muchos. Un *VCS* nos permite llevar un historial de las modificaciones que hace cada miembro de un equipo de desarrolladores en una aplicación, software. 
 
@@ -10,7 +10,7 @@ Los *VCS* tienen como ventaja principal el hecho de poder dividir en diferentes 
 
  Una vez entendido esto es necesario saber que es Git.
 
-## **¿Qué es Git?**
+## ¿Qué es Git?
 
 Git es un *VCS* que permite hacer las tareas ya explicadas y mucho más. 
 
@@ -24,7 +24,7 @@ Para conocer un poco más de este *VCS*  veamos unos datos rápidos:
 |Versión Actual |2.35.1 |
 |Sitio oficial |<a href="http://git-scm.com/">Git</a>|
 
-## **¿Qué es un repositorio?**
+## ¿Qué es un repositorio?
 
 Un repositorio es el sitio donde subimos el código de la aplicación. Para que lo entiendas es como un Google Drive de código. 
 
@@ -32,16 +32,46 @@ Una confución es que Git es un repositorio pero esto es erróneo. Se suele conf
 
 En un repositorio de código uno puede alojar el código de una aplicación en la nube teniendo la seguridad de acceder a el desde cualquier parte del mundo y sin temer a que se rompa tu disco duro y pierdas toda tu aplicación por completo. 
 
-## **¿Qué es GitHub?**
+## ¿Qué es GitHub?
 
 GitHub es un repositorio de código desarrollado por Microsoft. Actualemente (2022) es el más utilizado en todo el mundo por las empresas. Tiene una integración completa con Git y permite utilizarlo de una manera muy rápida con Git. 
 
 Existen otros repositorios de código como BitBucket, SourceForge, Assembla, CloudForge. Estos tambien son muy buenos pero para aprender git utilizaremos GitHub, ya que es muy sencillo y es el más utilizado. 
 
-## **¿Cómo funciona Git?**
+# **Conceptos importantes**
 
-Tienes que saber que hay dos maneras de utilizar Git. graficamente o por teminal. Para realmente aprender Git lo mejor es utiliza la terminal, además de que tendremos más rapidez a la hora de ejecutar acciones y podemos personalizar y hasta automatizar comandos. Por último quiero aclarar que de seguro cuando estas programando tienes una teminal abierta y esta es la manera más rápida de utilizar Git, no obstante aprenderemos la manera gráfica mendiante aplicaciones como GitHub Desktop es totalmente válido.
+## VCS
 
-El funcionamiento de Git es muy interesante, pero antes hay que definir ciertos conceptos.
+Un Sistema de Control de Versiones más conocido como *VCS* (Version Control System) es un sistema que nos permite tener un control de los cambios, modificaciones que tiene un software que se está desarrollando, ya sea entre pocos desarrolladores o muchos. Un *VCS* nos permite llevar un historial de las modificaciones que hace cada miembro de un equipo de desarrolladores en una aplicación, software. 
 
-## **Trabajo en Git**
+## Git
+
+Git es un sistema de control de versiones creado por Linus Torvald, actualmente es el más utilizado a nivel mundial.
+
+## Repositorio
+
+Un repositorio es un sitio donde uno guarda todo el proyecto. Existen dos tipos de repositorios:
+* **Local**: el repositorio local son los archivos guardados de manera local en el disco duro de la computadora.
+* **Remoto**: es un servidor donde se encuentra alojado el proyecto. La ventaja es que nos resguarda el código y es más seguro a contrario de tenerlo de manera local.
+
+## Commit
+
+Un commit es una acción que compromete los archivos, los pasa de la etapa de trabajo a la de preparación antes de subirlos al repositorio.
+## Ramas
+
+Las ramas son copias de todo el proyecto pero que actúan de manera separada al resto. Cuando se quiere modificar el código fuente esto puede gernerar problemas con el mismo, por ello es conveniente trabajar en un ambiente aislado en donde si hay errores no afecta al proyecto principal. Las ramas son un ambiente aislado que se bifurca del proyecto, estas contienen una copia del proyecto pero por separado, lo que permite realizar cualquier acción sobre el proyecto sin comprometerlo. Cuando se fiunaliza de realizar los cambios en la rama estos se pueden volver a juntar con la rama principal que es la que guarda el proyecto como tal. 
+
+# **Áreas de git**
+
+Las áreas de git sirven para separar y organizar el proyecto.
+
+## Working area
+
+El área de trabajo corresponde a todos los archivos locales. Cuando realizamos el desarrollo del proyecto nos encontramos en este área.
+
+## Staging area
+
+El área de preparación es donde se añaden los archivos para luego subirlos al repositorio. Primero deben pasar por esta etapa ya que es en la cual se realizan las revisiones de los archivos y se deside cuales subir al repositorio. Cuando pasamos del área de trabajo al área de prepearación se lo conoce como comprometer los archivos, estamos haciendo un commit.
+## Repository
+
+El repositorio es aquel lugar donde se almacenan los archivos del proyecto.
